# SO-shki

./: bridge.cpp
.github/workflows/: test-release.yml
tests/: CMakeLists.txt
